--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,9 @@ state_dir = .state
 [Logging]
 # Nome do arquivo de log para a Fase 1.
 log_filename = log_extracao.log
+
+[Selenium]
+# Para usar um perfil específico do Chrome e evitar CAPTCHAs, preencha os dois campos abaixo.
+# Para usar um perfil temporário (padrão), deixe estes campos em branco.
+user_data_dir = C:\Users\bhisgail\AppData\Local\Google\Chrome\User Data
+profile_directory = Default
